RESOLVED FIXED270285
[iOS] -replaceText:withText:options:completionHandler: does not work for multiple words
https://bugs.webkit.org/show_bug.cgi?id=270285
Summary [iOS] -replaceText:withText:options:completionHandler: does not work for mult...
Wenson Hsieh
Reported 2024-02-28 23:44:49 PST
Attachments
Wenson Hsieh
Comment 1 2024-02-28 23:50:51 PST
EWS
Comment 2 2024-02-29 10:21:25 PST
Committed 275503@main (42d447047f4f): <https://commits.webkit.org/275503@main> Reviewed commits have been landed. Closing PR #25282 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.