[iOS] -replaceText:withText:options:completionHandler: does not work for multiple words https://bugs.webkit.org/show_bug.cgi?id=270285 rdar://121351577

Reviewed by Richard Robinson.

Adjust this codepath to replace the original text in the cases where:
1. The original text is in front of (or around) the selection.
2. The original text spans multiple words.

To achieve this, we also refactor and simplify the fallback codepath that searches for the original
text before the caret selection, such that we try to discover the original text before or after the
selection, using `rangeExpandedAroundPositionByCharacters` and `findPlainText`.

Test: AutocorrectionTests.MultiWordAutocorrectionFromStartOfText

* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::applyAutocorrectionInternal):
* Tools/TestWebKitAPI/Tests/ios/AutocorrectionTestsIOS.mm:

Canonical link: https://commits.webkit.org/275503@main